# opendis-module

./: .gitignore  CLAUDE.md  README.md  challenge_build_result.json  challenge_docs_result.json  challenge_test_result.json  module_config.json  module_manifest.json  pyproject.toml
opendis_module/: __init__.py  __main__.py  logging_config.py  module_config.py
opendis_module/functions/: __init__.py  analyze_scenario.py  convert_dis_to_json.py  extract_entity_states.py  parse_dis_capture.py  parse_dis_stream.py  plot_scenario.py  registry.py  validate_dis_stream.py
opendis_module/functions/base/: function_io.py
opendis_module/services/: __init__.py  capture_parser.py  dis_converter.py  dis_parser.py  dis_validator.py  ecef_convert.py  entity_extractor.py  scenario_analyzer.py
scripts/macos/: build.sh  clean.sh  install.sh  test_unit.sh
tests/: conftest.py  run_in_istari.py  test_core.py
tests/results/: platform_test_report.json
tests/test_inputs/: scenario_basic.dis  scenario_combat.dis  single_entity.dis
