[tool.poetry]
name = "opendis-module"
version = "1.0.0"
description = "Istari module for parsing DIS (IEEE 1278.1) binary PDU streams via opendis"
authors = ["Istari Engineering <gandalf@istaridigital.com>"]
readme = "README.md"
packages = [{include = "opendis_module"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pydantic = "^2.0"
opendis = ">=1.0"
matplotlib = ">=3.7"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.0"
pytest = "^8.0"
pytest-cov = "^6.0"
ruff = "^0.9.0"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
